moving up to contacts section

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,6 @@ body {
 /* ---- Navbar --- */
 .navbar {
   border-bottom: 3px solid rgb(19, 18, 18); 
-}
-
-.navbar {
   background-color: #b4cfe2;
 }
 
@@ -33,7 +30,9 @@ body {
 
 .skills-icons {
   padding-top: 50px;
+  max-width: 100%;
 }
+
 
 /* -- About Me Section --- */
 .about {
@@ -62,6 +61,10 @@ body {
   padding-right: 10%;
 }
 
+.intmhobbs {
+  max-width: 100%;
+}
+
 
 /* --- Projects Section --- */
 .projects-head {
@@ -78,20 +81,17 @@ body {
   background-color: #105d94;
 }
 
-.project-description {
-  position:relative;
-  top: 10px;
-  text-align: center;
-  color: black;
+.project-desc-div {
+  position: absolute;
+  bottom: -15px;
+  left: 5%;
+  right: 5%;
+  transform: translateY(-50%);
 }
 
-
-/* --- Contacts Section --- */
-
-.contacts-div {
-  border-top: 3px solid rgb(19, 18, 18);
-  background-color: #105d94;
-  height: 600px;
+.project-description {
+  color: black;
+  text-align: center;
 }
 
 
@@ -99,6 +99,7 @@ body {
 /* -------------------------- CAROUSEL --------------------------- */
 
 .card-carousel-div {
+  position: relative;
   border-top: 3px solid rgb(19, 18, 18);
   height: 1040px;
   background: no-repeat center url("images/wave1.png");
@@ -107,13 +108,12 @@ body {
 }
 
 #carousel {
- /*  margin-top: 200px;
-  padding-top: 200px; */
   position: relative;
   height: 400px;
   top: 30%;
   transform: translateY(-50%);
   overflow: hidden;
+  max-width: 100%;
 }
 
 #carousel div {
@@ -195,15 +195,26 @@ body {
   width: 200px;
 }
 
+
 /* -- Carousel Button --- */
 .buttons {
-  position: relative;
-  left: 0;
-  right: 0;
-  margin: auto;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 18%;
+  z-index: 100;
 } 
 
 #prev,
 #next {
   border: 1px solid black;
+}
+
+
+/* --- Contacts Section --- */
+
+.contacts-div {
+  border-top: 3px solid rgb(19, 18, 18);
+  background-color: #105d94;
+  height: 600px;
 }
